--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,10 +3,10 @@
 
 name: Node.js CI
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
-  build:
+  test_and_build:
 
     runs-on: ubuntu-latest
 
@@ -21,6 +21,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
+    - run: npm run lint
     - run: npm run build 
     - run: npm run clean:dist
       env:
