--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@biesbjerg/ngx-translate-extract": "^6.0.4",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
+    "angular-notifier": "^6.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
